src/test/ui/object-lifetime/object-lifetime-default-from-rptr-box-error.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/object-lifetime-default-from-rptr-box-error.rs:25:5
   |
LL | fn c<'a>(t: &'a Box<Test+'a>, mut ss: SomeStruct<'a>) {
   |      -- lifetime `'a` defined here
LL |     ss.t = t; //~ ERROR mismatched types
   |     ^^^^^^^^ assignment requires that `'a` must outlive `'static`

error: aborting due to previous error

